# llm-sidebar-anchor-v3.0.0

./: .env.example  .gitignore  LICENSE  LLMScribePro.spec  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_dist.py  build_exe.py
src/llm_scribe/: config.py  main.py
src/llm_scribe/core/: ai_provider.py  clipboard_monitor.py  data_manager.py  exporter.py  ollama_provider.py  security.py
src/llm_scribe/platform/: clipboard.py  machine_id.py  window_features.py
src/llm_scribe/ui/: components.py  export_dialog.py  main_window.py  move_dialog.py  styles.py  wizard.py
src/llm_scribe/utils/: backup.py  logger.py
tests/: test_security.py
