[project]
name = "llm-scribe-pro"
version = "2.1.0"
description = "Professional AI Conversation Scribe Tool with Modern UI and Secure Storage"
authors = [
    { name = "LLM Scribe Team" }
]
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "cryptography>=41.0.0",
    "pystray>=0.19.0",
    "pynput>=1.7.6",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "markdown>=3.4.4",
    "pygments>=2.16.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.9.1",
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["PLR0913", "PLR0915"]

[tool.black]
line-length = 100
target-version = ["py39"]
